<resources>
    <string name="app_name">BuyAtHome</string>
    <string name="server_client_id">AIzaSyBRM59w2KLUvgelFT7g1XwKVq7-ejsUdTE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">944221395647073</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_laptops">Laptops</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_my_cart">My Cart</string>
    <string name="action_my_cart">Delete All</string>
    <string name="title_activity_my_favourites">MyFavourites</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Register now.</string>
    <string name="btn_link_to_login">Already registered! Log Me in.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="action_search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_phones">Phones</string>
    <string name="title_activity_phone_accessories">PhoneAccessories</string>
    <string name="title_activity_laptop_accessories">LaptopAccessories</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_verification">Verification</string>
    <string name="title_activity_most_rated">MostRated</string>
    <string name="notification">Notification</string>
    <string name="title_activity_latest_laptops">LatestLaptops</string>
    <string name="title_activity_latest_phones">LatestPhones</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_zoom_image">ZoomImage</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_name_mail">NameMail</string>
    <string name="action_accept">Accept</string>
    <string name="title_activity_test">Test</string>
    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_hours">about %d hours</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">about a year</string>
    <string name="time_ago_years">%d years</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_add_new_product">New Product</string>
    <string-array name="get_arrays">
        
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>
    <string name="url">http://snapt.t15.org/buyathome/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_phones">Phones</string>
    <string name="title_accessories">Accessories</string>
    <string name="item_deleted">Item deleted</string>
    <string name="item_undo">Undo</string>
    <string name="title_activity_featured_details">Featured</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="err_msg_landMark">Enter nearest landmark</string>
    <string name="err_msg_city">Enter your current city or town</string>
    <string name="err_msg_phone">Enter your phone number</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Please provide your email</string>
    <string name="action_cart">Cart</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
</resources>