<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activites.Details">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_menu_cart"
        android:title="@string/action_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
