<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activites.MainActivity">
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_contact"
        android:icon="@drawable/ic_action_accept"
        android:title="Contact us" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_menu_cart"
        android:title="@string/action_cart"
        app:showAsAction="always" />

</menu>
